--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
   </licenses>
 
   <properties>
-    <patterntesting.version>1.2.0</patterntesting.version>
+    <patterntesting.version>1.2.10-YEARS</patterntesting.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.5</java.version>
   </properties>
@@ -310,11 +310,6 @@
 
   <dependencies>
   
-    <dependency>
-      <groupId>org.aspectj</groupId>
-      <artifactId>aspectjrt</artifactId>
-      <version>1.6.6</version>
-    </dependency>
     <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
