--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
         <plugin>
 	      <groupId>org.codehaus.mojo</groupId>
 	      <artifactId>findbugs-maven-plugin</artifactId>
-	      <version>2.3.2</version>
+	      <version>2.4.0</version>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -167,7 +167,7 @@
 		      <plugin>
 		        <groupId>org.codehaus.mojo</groupId>
 		        <artifactId>findbugs-maven-plugin</artifactId>
-		        <version>2.3.2</version>
+		        <version>2.4.0</version>
 		        <configuration>
 		          <findbugsXmlOutput>true</findbugsXmlOutput>
 		          <findbugsXmlWithMessages>true</findbugsXmlWithMessages>
@@ -287,22 +287,22 @@
           Build should fail if FindBugs reports an error
           see http://mojo.codehaus.org/findbugs-maven-plugin/examples/violationChecking.html
        -->
-      <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>findbugs-maven-plugin</artifactId>
-        <configuration>
-          <effort>Max</effort>
-          <threshold>Normal</threshold>
-          <excludeFilterFile>config/findbugs-exclude.xml</excludeFilterFile>
-        </configuration>
-        <executions>
-          <execution>
-            <goals>
-              <goal>check</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
+<!--       <plugin> -->
+<!--         <groupId>org.codehaus.mojo</groupId> -->
+<!--         <artifactId>findbugs-maven-plugin</artifactId> -->
+<!--         <configuration> -->
+<!--           <effort>Max</effort> -->
+<!--           <threshold>Normal</threshold> -->
+<!--           <excludeFilterFile>config/findbugs-exclude.xml</excludeFilterFile> -->
+<!--         </configuration> -->
+<!--         <executions> -->
+<!--           <execution> -->
+<!--             <goals> -->
+<!--               <goal>check</goal> -->
+<!--             </goals> -->
+<!--           </execution> -->
+<!--         </executions> -->
+<!--       </plugin> -->
 
   	</plugins>
   	
