--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>com.github.oboehm</groupId>
   <artifactId>gdv-xport</artifactId>
   <packaging>jar</packaging>
-  <version>0.7.0-SNAPSHOT</version>
+  <version>0.7.0</version>
   <name>GDV-Xport</name>
   <url>http://www.aosd.de/gdv.xport/</url>
   <organization>
@@ -259,30 +259,6 @@
         </configuration>
       </plugin>
 
-      <!-- 
-          see http://wiki.hudson-ci.org//display/HUDSON/Cobertura+Plugin
-       -->
-      <!-- 
-      <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>cobertura-maven-plugin</artifactId>
-          <version>2.2</version>
-          <configuration>
-              <formats>
-                  <format>xml</format>
-              </formats>
-          </configuration>
-          <executions>
-              <execution>
-                  <phase>package</phase>
-                  <goals>
-                      <goal>cobertura</goal>
-                  </goals>
-              </execution>
-          </executions>
-      </plugin>
-  	   -->
-      
   	</plugins>
   	
   </build>
@@ -573,8 +549,8 @@
   </issueManagement>
   
   <ciManagement>
-    <system>hudson</system>
-    <url>http://bbb.i:8280/view/gdv.xport/</url>
+    <system>jenkins</system>
+    <url>http://miniserver:8280/view/gdv.xport/</url>
     <notifiers>
       <notifier>
         <type>mail</type>
