--- a/.settings/org.eclipse.jdt.ui.prefs
+++ b/.settings/org.eclipse.jdt.ui.prefs
@@ -1,4 +1,3 @@
-#Fri Apr 08 18:15:35 CEST 2011
 cleanup.add_default_serial_version_id=true
 cleanup.add_generated_serial_version_id=false
 cleanup.add_missing_annotations=true
@@ -16,14 +15,14 @@ cleanup.convert_to_enhanced_for_loop=false
 cleanup.correct_indentation=false
 cleanup.format_source_code=false
 cleanup.format_source_code_changes_only=false
-cleanup.make_local_variable_final=false
-cleanup.make_parameters_final=true
+cleanup.make_local_variable_final=true
+cleanup.make_parameters_final=false
 cleanup.make_private_fields_final=true
 cleanup.make_type_abstract_if_missing_method=false
-cleanup.make_variable_declarations_final=true
+cleanup.make_variable_declarations_final=false
 cleanup.never_use_blocks=false
 cleanup.never_use_parentheses_in_expressions=true
-cleanup.organize_imports=true
+cleanup.organize_imports=false
 cleanup.qualify_static_field_accesses_with_declaring_class=false
 cleanup.qualify_static_member_accesses_through_instances_with_declaring_class=true
 cleanup.qualify_static_member_accesses_through_subtypes_with_declaring_class=true
@@ -43,7 +42,7 @@ cleanup.remove_unused_private_methods=true
 cleanup.remove_unused_private_types=true
 cleanup.sort_members=false
 cleanup.sort_members_all=false
-cleanup.use_blocks=true
+cleanup.use_blocks=false
 cleanup.use_blocks_only_for_return_and_throw=false
 cleanup.use_parentheses_in_expressions=false
 cleanup.use_this_for_non_static_field_access=false
