--- a/.settings/org.eclipse.jdt.ui.prefs
+++ b/.settings/org.eclipse.jdt.ui.prefs
@@ -52,5 +52,5 @@ cleanup.use_this_for_non_static_method_access_only_if_necessary=true
 cleanup_profile=_gdv.xport
 cleanup_settings_version=2
 eclipse.preferences.version=1
-formatter_profile=_eclipse-cs gdv.xport
-formatter_settings_version=11
+formatter_profile=_gdv.xport
+formatter_settings_version=12
