--- a/deprecated/pom.xml
+++ b/deprecated/pom.xml
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
+08<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.github.oboehm</groupId>
     <artifactId>gdv-xport</artifactId>
-    <version>6.1.1-SNAPSHOT</version>
+    <version>6.1.1</version>
   </parent>
 
   <artifactId>gdv-xport-deprecated</artifactId>
