--- a/service/pom.xml
+++ b/service/pom.xml
@@ -208,6 +208,17 @@
         </executions>
       </plugin>
 
+      <plugin>
+        <groupId>com.google.cloud.tools</groupId>
+        <artifactId>jib-maven-plugin</artifactId>
+        <version>3.2.1</version>
+        <configuration>
+          <to>
+            <image>oboehm/gdv-xport</image>
+          </to>
+        </configuration>
+      </plugin>
+
     </plugins>
 
   </build>
