--- a/pom.xml
+++ b/pom.xml
@@ -39,8 +39,8 @@
 
   <properties>
 
-    <patterntesting.version>2.0.2</patterntesting.version>
-    <spring-boot.version>2.4.13</spring-boot.version>
+    <patterntesting.version>2.2.20-YEARS</patterntesting.version>
+    <spring-boot.version>2.5.13</spring-boot.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
     <maven.compiler.source>1.8</maven.compiler.source>
@@ -158,7 +158,7 @@
         <plugin>
           <groupId>org.jacoco</groupId>
           <artifactId>jacoco-maven-plugin</artifactId>
-          <version>0.8.7</version>
+          <version>0.8.8</version>
         </plugin>
         <plugin>
           <groupId>org.codehaus.mojo</groupId>
