--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 
   <properties>
 
-    <patterntesting.version>2.2.20-YEARS</patterntesting.version>
+    <patterntesting.version>2.1.2</patterntesting.version>
     <spring-boot.version>2.5.13</spring-boot.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
