--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -12,7 +12,7 @@
   <parent>
     <groupId>com.github.oboehm</groupId>
     <artifactId>gdv-xport</artifactId>
-    <version>6.4.0-SNAPSHOT</version>
+    <version>6.4.0</version>
   </parent>
 
   <artifactId>gdv-xport-lib</artifactId>
