--- a/pom.xml
+++ b/pom.xml
@@ -400,6 +400,11 @@
         <artifactId>commons-lang3</artifactId>
         <version>3.12.0</version>
       </dependency>
+      <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-text</artifactId>
+        <version>1.10.0</version>
+      </dependency>
 
       <!-- Testing -->
       <dependency>
@@ -529,7 +534,7 @@
       <dependency>
         <groupId>de.jfachwert</groupId>
         <artifactId>jfachwert</artifactId>
-        <version>4.2.3</version>
+        <version>4.4.3</version>
       </dependency>
 
       <!-- for JsonFormatter -->
