--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>com.github.oboehm</groupId>
   <artifactId>gdv-xport</artifactId>
   <packaging>pom</packaging>
-  <version>6.4.2</version>
+  <version>6.4.3-SNAPSHOT</version>
   <name>GDV.XPort</name>
 
   <modules>
@@ -40,7 +40,7 @@
   <properties>
 
     <patterntesting.version>2.1.2</patterntesting.version>
-    <spring-boot.version>2.6.14</spring-boot.version>
+    <spring-boot.version>2.5.14</spring-boot.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
     <maven.compiler.source>1.8</maven.compiler.source>
