--- a/pom.xml
+++ b/pom.xml
@@ -512,7 +512,17 @@
       <dependency>
         <groupId>nz.net.ultraq.thymeleaf</groupId>
         <artifactId>thymeleaf-layout-dialect</artifactId>
-        <version>2.5.3</version>
+        <version>3.2.0</version>
+      </dependency>
+      <dependency>
+        <groupId>org.thymeleaf</groupId>
+        <artifactId>thymeleaf</artifactId>
+        <version>3.1.1.RELEASE</version>
+      </dependency>
+      <dependency>
+        <groupId>org.thymeleaf</groupId>
+        <artifactId>thymeleaf-spring5</artifactId>
+        <version>3.1.1.RELEASE</version>
       </dependency>
       <dependency>
         <groupId>org.webjars</groupId>
