--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -245,6 +245,16 @@
       <artifactId>junit-platform-engine</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.github.netmikey.logunit</groupId>
+      <artifactId>logunit-core</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.github.netmikey.logunit</groupId>
+      <artifactId>logunit-log4j2</artifactId>
+      <scope>test</scope>
+    </dependency>
 
     <!-- Validation -->
     <dependency>
