--- a/pom.xml
+++ b/pom.xml
@@ -480,11 +480,21 @@
         <version>42.4.3</version>
       </dependency>
 
-      <!-- PatternTesting -->
+      <!-- Testing -->
       <dependency>
         <groupId>org.patterntesting</groupId>
         <artifactId>patterntesting-rt</artifactId>
         <version>${patterntesting.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>io.github.netmikey.logunit</groupId>
+        <artifactId>logunit-core</artifactId>
+        <version>2.0.0</version>
+      </dependency>
+      <dependency>
+        <groupId>io.github.netmikey.logunit</groupId>
+        <artifactId>logunit-log4j2</artifactId>
+        <version>2.0.0</version>
       </dependency>
 
       <!-- Import dependency management from Spring Boot -->
