--- a/pom.xml
+++ b/pom.xml
@@ -472,7 +472,8 @@
       <dependency>
         <groupId>org.hsqldb</groupId>
         <artifactId>hsqldb</artifactId>
-        <version>2.7.2</version>
+        <version>2.6.1</version>
+        <classifier>jdk8</classifier>
       </dependency>
       <dependency>
         <groupId>org.postgresql</groupId>
