--- a/service/pom.xml
+++ b/service/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>com.github.oboehm</groupId>
     <artifactId>gdv-xport</artifactId>
-    <version>7.0.1</version>
+    <version>7.0.2-SNAPSHOT</version>
   </parent>
 
   <artifactId>gdv-xport-service</artifactId>
