--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>com.github.oboehm</groupId>
   <artifactId>gdv-xport</artifactId>
   <packaging>pom</packaging>
-  <version>7.0.2-SNAPSHOT</version>
+  <version>7.1.0</version>
   <name>GDV.XPort</name>
 
   <modules>
@@ -261,15 +261,12 @@
             s. https://github.com/spring-projects/spring-boot/issues/6254
           -->
           <classesDirectory>${project.build.outputDirectory}</classesDirectory>
-          <systemProperties>
-            <property>
-              <name>patterntesting.integrationTest</name>
-              <value>true</value>
-            </property>
+          <systemPropertyVariables>
+            <patterntesting.integrationTest>true</patterntesting.integrationTest>
             <includes>
               <include>**/*IT.java</include>
             </includes>
-          </systemProperties>
+          </systemPropertyVariables>
         </configuration>
         <executions>
           <execution>
