--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
   <groupId>com.github.oboehm</groupId>
   <artifactId>gdv-xport</artifactId>
   <packaging>pom</packaging>
-  <version>7.1.1</version>
+  <version>7.1.2-SNAPSHOT</version>
   <name>GDV.XPort</name>
 
   <modules>
